--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="input-output">
             <div class="inputfield">
                 <input type="text" placeholder="your name" id="yname">
-                <!-- <span>+</span> -->
+                <span style="padding-inline:10px;font-size:1.3rem;font-weight: bolder;">+</span>
                 <input type="text" placeholder="love name" id="lname">
             </div>
             <div class="btn">
